vim and tmux changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color" # colors!
+set -g default-terminal "tmux-256color" # colors!
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
