--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "tmux-256color" # colors!
+set-option -g default-shell /usr/bin/fish
+
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
