changing binding for previous tmux window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,7 @@ bind -n M-l select-pane -R
 # bind -n M-Up select-pane -U
 # bind -n M-Right select-pane -R
 
-# alt-wb to switch between windows
-bind -n M-b previous-window
+bind -n M-W previous-window
 bind -n M-w next-window
 
 # alt-np to switch between sessions
