--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "tmux-256color" # colors!
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
