--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,17 @@
+### OPTIONS
+set-option -g default-shell /opt/homebrew/bin/fish
 set -g default-terminal "tmux-256color" # colors!
-set-option -g default-shell /usr/local/bin/fish
-
-# reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
-
+set -g mouse on
 # remove any delay on processing the esc key.
 set -s escape-time 0
+
+### CTRL B BINDS
+# 'r' to reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+# 'k' to kill pane
+bind k killp
+
+### NAVIGATION BINDS
 
 # alt-hjkl to switch between panes
 bind -n M-h select-pane -L
@@ -13,45 +19,39 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# # alt-arrows to switch between panes
-# bind -n M-Left select-pane -L
-# bind -n M-Down select-pane -D
-# bind -n M-Up select-pane -U
-# bind -n M-Right select-pane -R
+# alt-io to switch between windows
+bind -n M-i next-window
+bind -n M-o previous-window
 
-bind -n M-W previous-window
-bind -n M-w next-window
+# # alt-,. to switch between sessions
+# bind -n M-\, switch-client -n
+# bind -n M-\. switch-client -p
 
-# alt-np to switch between sessions
-bind -n M-n switch-client -n
-bind -n M-p switch-client -p
-
-# toggle zoom
-bind -n M-r resize-pane -Z
-
-# alt s/v to split pane horiz or vert
-bind -n M-s split-window -v
-bind -n M-v split-window -h
-
-# alt c to kill pane
-bind -n M-c killp
-
-# custom work mappings
+# Switch between hardcoded session names
 bind -n M-4 switch -t musica
 bind -n M-5 switch -t sh
 bind -n M-6 switch -t hermes
 
-# toggle mouse
-set -g mouse on
+# semi colon toggles zoom
+bind -n M-\; resize-pane -Z
 
-# -- display -------------------------------------------------------------------
+### CREATION BINDS
+
+# alt-m to make a window
+bind -n M-m new-window
+
+# alt-s/v to split pane horiz or vert
+bind -n M-s split-window -v
+bind -n M-v split-window -h
+
+### DISPLAY
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 set -g set-titles on          # set terminal title
 
-# -- status bar -----------------------------------------------------------------
+### STATUS BAR
 set -g status-style "bg=default"
 set -g status-style "fg=#8aadf4"
 set -g status-right "%I:%M %p"
