new dotfiles changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 ### OPTIONS
-set-option -g default-shell /opt/homebrew/bin/fish
+set-option -g default-shell /usr/bin/fish
 set -g default-terminal "tmux-256color" # colors!
 set -g mouse on
 # remove any delay on processing the esc key.
