--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,11 @@
 shell /usr/bin/fish
 
 # Font Configuration
-font_family JetBrainsMono Nerd Font
+font_family FiraMono Nerd Font
 bold_italic_font auto
 font_size 12.0
+# Handle emojis
+symbol_map U+1F600-U+1F64F Noto Color Emoji
 
 # Window Configuration
 window_padding_width 12
@@ -26,10 +28,6 @@ scrollback_lines 3000
 # Terminal features
 copy_on_select yes
 strip_trailing_spaces smart
-
-# Tab configuration
-tab_bar_style powerline
-tab_bar_align left
 
 # Shell integration
 shell_integration enabled
