[hyprland] Add env vars for nvidia and slow chrome load

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,6 +33,13 @@ exec-once = elephant & walker --gapplication-service &
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = VK_DRIVER_FILES,
+
+# NVIDIA environment variables
+env = NVD_BACKEND,direct
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 
 ###################
 ### PERMISSIONS ###
