[kitty] Add clipboard settings

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,10 +13,14 @@ window_padding_height 12
 background_opacity 1.0
 background_blur 32
 hide_window_decorations yes
-
 hide_window_decorations yes
 show_window_resize_notification no
 confirm_os_window_close 0
+
+# Clipboard
+map ctrl+v paste_from_clipboard
+copy_on_select yes
+strip_trailing_spaces smart
 
 # Cursor Configuration
 cursor_shape block
@@ -24,10 +28,6 @@ cursor_blink_interval 1
 
 # Scrollback
 scrollback_lines 3000
-
-# Terminal features
-copy_on_select yes
-strip_trailing_spaces smart
 
 # Shell integration
 shell_integration enabled
