[hyprland] Add walker based power menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -214,13 +214,14 @@ $M = SUPER # Sets "Windows" key as main modifier
 bindd = $M, Q, Kill active window, killactive
 bindd = $M, D, Toggle workspace, workspace, previous
 bindd = $M, Return, Launch terminal, exec, $terminal
+bindd = $M, P, Launch power menu, exec, ~/dotfiles/scripts/menus/power-menu.sh
 bindd = $M, F, Toggle fullscreen, fullscreen, 0
 
 bind = $M, M, exit,
 bind = $M, E, exec, $fileManager
 bind = $M, V, togglefloating,
 bind = $M, R, exec, $menu
-bind = $M, P, pseudo, # dwindle
+# bind = $M, P, pseudo, # dwindle
 bind = $M, T, togglesplit, # dwindle
 
 # Move focus with M + hjkl
