[hyprland] Remove __GLX_VENDOR_LIBRARY_NAME

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,13 +1,3 @@
-################
-### MONITORS ###
-################
-
-# See https://wiki.hypr.land/Configuring/Monitors/
-source = ~/.config/hypr/monitors.conf
-
-monitor=,preferred,auto,auto
-
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -30,16 +20,8 @@ exec-once = elephant & walker --gapplication-service &
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# This makes chrome startup faster.
 env = VK_DRIVER_FILES,
-
-# NVIDIA environment variables
-env = NVD_BACKEND,direct
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
 
 ###################
 ### PERMISSIONS ###
@@ -301,3 +283,12 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+################
+### MONITORS ###
+################
+
+monitor=,preferred,auto,auto
+
+# See https://wiki.hypr.land/Configuring/Monitors/
+source = ~/.config/hypr/monitors.conf
