[hyprland] Set up key bind to launch browser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,8 @@ $menu = walker
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-exec-once = waybar & hyprpaper &
+# exec-once = waybar & hyprpaper &
+exec-once = qs -c retro & hyprpaper &
 exec-once = elephant & walker --gapplication-service &
 
 #############################
@@ -48,8 +49,8 @@ env = VK_DRIVER_FILES,
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 3
+    gaps_out = 0
 
     border_size = 2
 
@@ -68,7 +69,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 8
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -76,7 +77,7 @@ decoration {
     inactive_opacity = 0.9
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -85,17 +86,14 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
+        size = 2
+        passes = 2
         vibrancy = 0.1696
     }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
-
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
@@ -195,14 +193,17 @@ $M = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bindd = $M, Q, Kill active window, killactive
 bindd = $M, D, Toggle workspace, workspace, previous
-bindd = $M, Return, Launch terminal, exec, $terminal
 bindd = $M, P, Launch power menu, exec, ~/dotfiles/scripts/menus/power-menu.sh
 bindd = $M, F, Toggle fullscreen, fullscreen, 0
+
+# Apps on hotkeys.
+bindd = $M, Return, Launch terminal, exec, $terminal
+bindd = $M SHIFT, B, Launch default browser, exec, ~/dotfiles/scripts/launch-browser.sh
 
 bind = $M, M, exit,
 bind = $M, E, exec, $fileManager
 bind = $M, V, togglefloating,
-bind = $M, R, exec, $menu
+bind = $M, Space, exec, $menu
 # bind = $M, P, pseudo, # dwindle
 bind = $M, T, togglesplit, # dwindle
 
