[install] Fixup install after actual usage

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/mal/.config/mythemes/current/backgrounds/6502_bg.png
-wallpaper = DP-3,/home/mal/.config/mythemes/current/backgrounds/6502_bg.png
+preload = ~/.config/mythemes/current/backgrounds/1-catppuccin.png
+wallpaper = ,~/.config/mythemes/current/backgrounds/1-catppuccin.png
