--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@ shell /usr/bin/fish
 
 # Font Configuration
 font_family FiraMono Nerd Font
+# font_family SauceCodePro Nerd Font
 bold_italic_font auto
 font_size 12.0
 # Handle emojis
