--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -291,5 +291,10 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 monitor=,preferred,auto,auto
 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
 # See https://wiki.hypr.land/Configuring/Monitors/
 source = ~/.config/hypr/monitors.conf
