[install] fixup after using on home pc

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,14 @@
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+# See https://wiki.hypr.land/Configuring/Environment-variables/
+
+env = QT_QPA_PLATFORM,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+# nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -15,14 +26,6 @@ $menu = walker
 # exec-once = waybar & hyprpaper &
 exec-once = qs -c retro & hyprpaper &
 exec-once = elephant & walker --gapplication-service &
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hypr.land/Configuring/Environment-variables/
-# This makes chrome startup faster.
-env = VK_DRIVER_FILES,
 
 ###################
 ### PERMISSIONS ###
@@ -203,7 +206,7 @@ bindd = $M SHIFT, B, Launch default browser, exec, ~/dotfiles/scripts/launch-bro
 bind = $M, M, exit,
 bind = $M, E, exec, $fileManager
 bind = $M, V, togglefloating,
-bind = $M, Space, exec, $menu
+bind = $M, R, exec, $menu
 # bind = $M, P, pseudo, # dwindle
 bind = $M, T, togglesplit, # dwindle
 
