[config] Mac changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,6 +18,9 @@ hide_window_decorations yes
 show_window_resize_notification no
 confirm_os_window_close 0
 
+# macOS-specific options
+macos_option_as_alt left
+
 # Clipboard
 map ctrl+v paste_from_clipboard
 copy_on_select yes
