[hypr] Try scrolling & make monitor toggle script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,27 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = walker
 
+###############
+### PLUGINS ###
+###############
+plugin {
+    hyprscrolling {
+        column_width = 0.7
+        fullscreen_on_one_column = false
+    }
+    dynamic-cursors {
+      # sets the cursor behaviour, supports these values:
+      # tilt    - tilt the cursor based on x-velocity
+      # rotate  - rotate the cursor based on movement direction
+      # stretch - stretch the cursor shape based on direction and velocity
+      # none    - do not change the cursors behaviour
+      mode = rotate
+      shake {
+        enabled = false
+      }
+    }
+}
+
 #################
 ### AUTOSTART ###
 #################
@@ -26,6 +47,7 @@ $menu = walker
 # exec-once = waybar & hyprpaper &
 exec-once = qs -c retro & hyprpaper &
 exec-once = elephant & walker --gapplication-service &
+exec-once = hyprpm reload
 
 ###################
 ### PERMISSIONS ###
@@ -67,7 +89,8 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    # layout = scrolling
+    layout = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -140,11 +163,6 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
-}
-
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
-master {
-    new_status = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
