[hyprland] Add keybind to toggle monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -221,7 +221,9 @@ bindd = $M, F, Toggle fullscreen, fullscreen, 0
 bindd = $M, Return, Launch terminal, exec, $terminal
 bindd = $M SHIFT, B, Launch default browser, exec, ~/dotfiles/scripts/launch-browser.sh
 
-bind = $M, M, exit,
+# Monitors
+bind = $M, M, exec, ~/dotfiles/scripts/hypr/toggle-dual-monitors.sh
+
 bind = $M, E, exec, $fileManager
 bind = $M, V, togglefloating,
 bind = $M, R, exec, $menu
