[hyprland] Add binds for groups

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ plugin {
         fullscreen_on_one_column = false
     }
     dynamic-cursors {
+      enabled = false
       # sets the cursor behaviour, supports these values:
       # tilt    - tilt the cursor based on x-velocity
       # rotate  - rotate the cursor based on movement direction
@@ -207,28 +208,35 @@ device {
 ###################
 ### KEYBINDINGS ###
 ###################
-
-# See https://wiki.hypr.land/Configuring/Keywords/
-$M = SUPER # Sets "Windows" key as main modifier
+$M = SUPER
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bindd = $M, Q, Kill active window, killactive
-bindd = $M, D, Toggle workspace, workspace, previous
 bindd = $M, P, Launch power menu, exec, ~/dotfiles/scripts/menus/power-menu.sh
-bindd = $M, F, Toggle fullscreen, fullscreen, 0
 
 # Apps on hotkeys.
 bindd = $M, Return, Launch terminal, exec, $terminal
 bindd = $M SHIFT, B, Launch default browser, exec, ~/dotfiles/scripts/launch-browser.sh
+bindd = $M, E, Launch file manager, exec, $fileManager
+bindd = $M, R, Application launcher, exec, $menu
 
 # Monitors
 bind = $M, M, exec, ~/dotfiles/scripts/hypr/toggle-dual-monitors.sh
 
-bind = $M, E, exec, $fileManager
-bind = $M, V, togglefloating,
-bind = $M, R, exec, $menu
-# bind = $M, P, pseudo, # dwindle
-bind = $M, T, togglesplit, # dwindle
+# Groups
+bindd = $M, G, Toggle group, togglegroup
+bindd = $M, I, Next window in group, changegroupactive, f
+bindd = $M, O, Previous window in group, changegroupactive, b
+bindd = $M SHIFT, H, Move window or group left, movewindoworgroup, l
+bindd = $M SHIFT, J, Move window or group down, movewindoworgroup, d
+bindd = $M SHIFT, K, Move window or group up, movewindoworgroup, u
+bindd = $M SHIFT, L, Move window or group right, movewindoworgroup, r
+
+# Misc
+bindd = $M, F, Toggle fullscreen, fullscreen, 0
+bindd = $M, Q, Kill active window, killactive
+bindd = $M, D, Toggle workspace, workspace, previous
+bindd = $M SHIFT, D, Toggle window, focuscurrentorlast
+bindd = $M, B, Toggle window floating, togglefloating,
 
 # Move focus with M + hjkl
 bind = $M, h, movefocus, l
@@ -269,10 +277,6 @@ bind = $M SHIFT, 0, movetoworkspace, 10
 # Example special workspace (scratchpad)
 bind = $M, S, togglespecialworkspace, magic
 bind = $M SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with M + scroll
-bind = $M, mouse_down, workspace, e+1
-bind = $M, mouse_up, workspace, e-1
 
 # Move/resize windows with M + LMB/RMB and dragging
 bindm = $M, mouse:272, movewindow
