--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -296,6 +296,11 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Universal clipboard
+bindd = SUPER, C, Universal copy, sendshortcut, CTRL SHIFT, C,
+bindd = SUPER, V, Universal paste, sendshortcut, CTRL SHIFT, V,
+bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
