--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ confirm_os_window_close 0
 macos_option_as_alt left
 
 # Clipboard
-map ctrl+v paste_from_clipboard
+map super+v paste_from_clipboard
 copy_on_select yes
 strip_trailing_spaces smart
 
