[hyprland] Add window rules for opening apps in workspaces; add forcekill bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -214,13 +214,13 @@ $M = SUPER
 bindd = $M, P, Launch power menu, exec, ~/dotfiles/scripts/menus/power-menu.sh
 
 # Apps on hotkeys.
+bindd = $M, Space, Application launcher, exec, $menu
 bindd = $M, Return, Launch terminal, exec, $terminal
-bindd = $M SHIFT, B, Launch default browser, exec, ~/dotfiles/scripts/launch-browser.sh
+bindd = $M, B, Launch default browser, exec, ~/dotfiles/scripts/launch-browser.sh
 bindd = $M, E, Launch file manager, exec, $fileManager
-bindd = $M, R, Application launcher, exec, $menu
 
 # Monitors
-bind = $M, M, exec, ~/dotfiles/scripts/hypr/toggle-dual-monitors.sh
+bindd = $M, M, Toggle dual monitor mode, exec, ~/dotfiles/scripts/hypr/toggle-dual-monitors.sh
 
 # Groups
 bindd = $M, G, Toggle group, togglegroup
@@ -234,9 +234,10 @@ bindd = $M SHIFT, L, Move window or group right, movewindoworgroup, r
 # Misc
 bindd = $M, F, Toggle fullscreen, fullscreen, 0
 bindd = $M, Q, Kill active window, killactive
+bindd = $M SHIFT, Q, Force kill active window, forcekillactive
 bindd = $M, D, Toggle workspace, workspace, previous
 bindd = $M SHIFT, D, Toggle window, focuscurrentorlast
-bindd = $M, B, Toggle window floating, togglefloating,
+bindd = $M, W, Toggle window floating, togglefloating,
 
 # Move focus with M + hjkl
 bind = $M, h, movefocus, l
@@ -300,6 +301,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bindd = SUPER, C, Universal copy, sendshortcut, CTRL SHIFT, C,
 bindd = SUPER, V, Universal paste, sendshortcut, CTRL SHIFT, V,
 bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
+
+####################
+### WINDOW RULES ###
+####################
+windowrule = workspace 4, class:^(google-chrome)$
+windowrule = workspace 6, class:^(discord)$
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
