[hyprland] Add steam window rule

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -302,12 +302,6 @@ bindd = SUPER, C, Universal copy, sendshortcut, CTRL SHIFT, C,
 bindd = SUPER, V, Universal paste, sendshortcut, CTRL SHIFT, V,
 bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
 
-####################
-### WINDOW RULES ###
-####################
-windowrule = workspace 4, class:^(google-chrome)$
-windowrule = workspace 6, class:^(discord)$
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -323,6 +317,11 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Always open certain apps in certain workspaces
+windowrule = workspace 4, class:^(google-chrome)$
+windowrule = workspace 6, class:^(steam)$
+windowrule = workspace 7, class:^(discord)$
 
 ################
 ### MONITORS ###
