--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -170,6 +170,7 @@ dwindle {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    focus_on_activate = true
 }
 
 
