[hyprland] more monitor/display settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,13 +27,13 @@ plugin {
         fullscreen_on_one_column = false
     }
     dynamic-cursors {
-      enabled = false
+      enabled = true
       # sets the cursor behaviour, supports these values:
       # tilt    - tilt the cursor based on x-velocity
       # rotate  - rotate the cursor based on movement direction
       # stretch - stretch the cursor shape based on direction and velocity
       # none    - do not change the cursors behaviour
-      mode = rotate
+      mode = tilt
       shake {
         enabled = false
       }
@@ -46,7 +46,7 @@ plugin {
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # exec-once = waybar & hyprpaper &
-exec-once = qs -c retro & hyprpaper &
+exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
 exec-once = elephant & walker --gapplication-service &
 exec-once = hyprpm reload
 
@@ -164,6 +164,10 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+}
+
+master {
+    orientation = top
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
@@ -318,9 +322,9 @@ windowrule = workspace 4, class:^(google-chrome)$
 windowrule = workspace 6, class:^(steam)$
 windowrule = workspace 7, class:^(discord)$
 
-################
-### MONITORS ###
-################
+###############
+### DISPLAY ###
+###############
 
 monitor=,preferred,auto,auto
 
@@ -328,5 +332,8 @@ monitor=,preferred,auto,auto
 xwayland {
   force_zero_scaling = true
 }
+
+# Fix large cursor in xwayland
+env = XCURSOR_SIZE,24
 
 source = ~/.config/hypr/monitors.conf
