[hyprland] Remove walker; fix per-workspace rules

--- a/.config/hypr/dual-monitor.conf
+++ b/.config/hypr/dual-monitor.conf
@@ -11,7 +11,7 @@ workspace=6,monitor:DP-1
 workspace=7,monitor:HDMI-A-1,default:true
 workspace=8,monitor:HDMI-A-1
 workspace=9,monitor:HDMI-A-1
-workspace=m[HDMIA-A-1], layoutopt:orientation:top
+workspace=r[7-9], layoutopt:orientation:top
 
 env = QT_SCREEN_SCALE_FACTORS,DP-1=1.5;HDMI-A-1=1.0
 
