--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = walker
+$menu = fuzzel
 
 ###############
 ### PLUGINS ###
@@ -47,7 +47,6 @@ plugin {
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # exec-once = waybar & hyprpaper &
 exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
-exec-once = elephant & walker --gapplication-service &
 exec-once = hyprpm reload
 
 ###################
@@ -166,15 +165,11 @@ dwindle {
     preserve_split = true # You probably want this
 }
 
-master {
-    orientation = top
-}
-
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-    focus_on_activate = true
+    focus_on_activate = false
 }
 
 
@@ -238,6 +233,8 @@ bindd = $M SHIFT, L, Move window or group right, movewindoworgroup, r
 
 # Misc
 bindd = $M, F, Toggle fullscreen, fullscreen, 0
+bindd = $M SHIFT, F, Toggle maximize, fullscreen, 1
+bindd = $M CTRL, F, Toggle fake fullscreen, fullscreenstate, -1, 3
 bindd = $M, Q, Kill active window, killactive
 bindd = $M SHIFT, Q, Force kill active window, forcekillactive
 bindd = $M, D, Toggle workspace, workspace, previous
