[hyprland] Remove scrolling plugin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,10 +22,6 @@ $menu = fuzzel
 ### PLUGINS ###
 ###############
 plugin {
-    hyprscrolling {
-        column_width = 0.7
-        fullscreen_on_one_column = false
-    }
     dynamic-cursors {
       enabled = true
       # sets the cursor behaviour, supports these values:
@@ -89,7 +85,6 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    # layout = scrolling
     layout = master
 }
 
@@ -300,8 +295,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Universal clipboard
-bindd = SUPER, C, Universal copy, sendshortcut, CTRL SHIFT, C,
-bindd = SUPER, V, Universal paste, sendshortcut, CTRL SHIFT, V,
+bindd = SUPER, C, Universal copy, sendshortcut, CTRL, Insert,
+bindd = SUPER, V, Universal paste, sendshortcut, SHIFT, Insert,
 bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
 
 ##############################
