walker -> fuzzel, screensavers using glslViewer

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,9 @@ env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
+env = EDITOR,nvim
+env = SUDO_EDITOR,nvim
+
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -44,6 +47,7 @@ plugin {
 # exec-once = waybar & hyprpaper &
 exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
 exec-once = hyprpm reload
+exec-once = hypridle
 
 ###################
 ### PERMISSIONS ###
@@ -167,6 +171,9 @@ misc {
     focus_on_activate = false
 }
 
+cursor {
+  inactive_timeout = 10
+}
 
 #############
 ### INPUT ###
@@ -313,6 +320,11 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = workspace 4, class:^(google-chrome)$
 windowrule = workspace 6, class:^(steam)$
 windowrule = workspace 7, class:^(discord)$
+
+# Screensaver rules
+windowrule = fullscreen, class:^(GLFW-Application)$
+windowrule = animation none, class:^(GLFW-Application)$
+windowrule = noanim, class:^(GLFW-Application)$
 
 ###############
 ### DISPLAY ###
