--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,8 +24,7 @@ bind -n M-i next-window
 bind -n M-o previous-window
 
 # # alt-,. to switch between sessions
-# bind -n M-\, switch-client -n
-# bind -n M-\. switch-client -p
+bind -n M-n switch-client -n
 
 # Switch between hardcoded session names
 bind -n M-4 switch -t musica
