fix fuzzel & new fish abbreviations

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,4 +1,8 @@
 include = ~/.config/fuzzel/colors.ini
 
 [main]
-font=JetBrainsMono Nerd Font Propo:size=20
+font=JetBrainsMono Nerd Font Mono:size=20
+
+[border]
+width=3
+radius=20
