force window props for games

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -320,6 +320,9 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = workspace 4, class:^(google-chrome)$
 windowrule = workspace 6, class:^(steam)$
 windowrule = workspace 7, class:^(discord)$
+# Force games to be fullscreen on WS 6
+windowrule = fullscreen, class:steam_app_(.*)
+windowrule = workspace 6, class:steam_app_(.*)
 
 # Screensaver rules
 windowrule = fullscreen, class:^(GLFW-Application)$
