[hypr] Fix breaking hyprland/paper changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -279,8 +279,8 @@ bind = $M SHIFT, 9, movetoworkspace, 9
 bind = $M SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $M, S, togglespecialworkspace, magic
-bind = $M SHIFT, S, movetoworkspace, special:magic
+# bind = $M, S, togglespecialworkspace, magic
+# bind = $M SHIFT, S, movetoworkspace, special:magic
 
 # Move/resize windows with M + LMB/RMB and dragging
 bindm = $M, mouse:272, movewindow
@@ -308,25 +308,60 @@ bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule {
+  name = ignore-maximize
+  suppress_event = maximize
+  match:class = .*
+}
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = fix-dragging
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
 
 # Always open certain apps in certain workspaces
-windowrule = workspace 4, class:^(google-chrome)$
-windowrule = workspace 6, class:^(steam)$
-windowrule = workspace 7, class:^(discord)$
+windowrule {
+  name = chrome
+  workspace = 4
+  match:class = ^(google-chrome)$
+}
+
+windowrule {
+  name = steam
+  workspace = 6
+  match:class = ^(steam)$
+}
+
 # Force games to be fullscreen on WS 6
-windowrule = fullscreen, class:steam_app_(.*)
-windowrule = workspace 6, class:steam_app_(.*)
+windowrule {
+  name = steam-apps
+  fullscreen = on
+  workspace = 6
+  match:class = steam_app_(.*)
+}
+
+windowrule {
+  name = discord
+  workspace = 7
+  match:class = ^(discord)$
+}
 
 # Screensaver rules
-windowrule = fullscreen, class:^(GLFW-Application)$
-windowrule = animation none, class:^(GLFW-Application)$
-windowrule = noanim, class:^(GLFW-Application)$
+windowrule {
+  name = screensaver
+  fullscreen = on
+  animation = none
+  no_anim = on
+  match:class = ^(GLFW-Application)$
+}
 
 ###############
 ### DISPLAY ###
