--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,5 @@
-preload = ~/.config/mythemes/current/backgrounds/1-catppuccin.png
-wallpaper = ,~/.config/mythemes/current/backgrounds/1-catppuccin.png
+splash = false
+wallpaper {
+  monitor =
+  path = /home/mal/oss/omarchy/themes/catppuccin/backgrounds/1-catppuccin.png
+}
