--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -348,6 +348,14 @@ windowrule {
   match:class = steam_app_(.*)
 }
 
+# Force pico to be fullscreen on WS 6
+windowrule {
+  name = steam-apps
+  fullscreen = on
+  workspace = 6
+  match:class = ^(pico8)$
+}
+
 windowrule {
   name = discord
   workspace = 7
