--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 splash = false
 wallpaper {
   monitor =
-  path = /home/mal/oss/omarchy/themes/catppuccin/backgrounds/1-catppuccin.png
+  path = ~/Downloads/wallpapers/second-sleep-diffuse.png
 }
