--- a/.config/hypr/single-monitor.conf
+++ b/.config/hypr/single-monitor.conf
@@ -1,5 +1,6 @@
 monitor=HDMI-A-1,disable
 monitor=DP-1,3840x2160@240.0,0x1195,2
+# monitor=DP-1,1920x1080@119.88,0x1195,1
 
 workspace=4,monitor:DP-1,default:true
 
