fix up install and dotfiles after fresh install

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 splash = false
 wallpaper {
   monitor =
-  path = ~/Downloads/wallpapers/second-sleep-diffuse.png
+  path = ~/Downloads/wallpapers/1.png
 }
