[hypr] Support tuiclock in hyprland binds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ plugin {
 exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
 exec-once = hyprpm reload
 exec-once = hypridle
+exec-once = [workspace special:tuiclock silent] ~/dotfiles/scripts/tuiclock/launch-tuiclock.sh
 
 ###################
 ### PERMISSIONS ###
@@ -278,9 +279,8 @@ bind = $M SHIFT, 8, movetoworkspace, 8
 bind = $M SHIFT, 9, movetoworkspace, 9
 bind = $M SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-# bind = $M, S, togglespecialworkspace, magic
-# bind = $M SHIFT, S, movetoworkspace, special:magic
+# Show the current time for 1 second
+bind = $M, T, exec, hyprctl dispatch togglespecialworkspace tuiclock && sleep 1 && hyprctl dispatch togglespecialworkspace tuiclock
 
 # Move/resize windows with M + LMB/RMB and dragging
 bindm = $M, mouse:272, movewindow
@@ -369,6 +369,15 @@ windowrule {
   animation = none
   no_anim = on
   match:class = ^(GLFW-Application)$
+}
+
+windowrule {
+  name = tuiclock
+  fullscreen = on
+  animation = none
+  no_anim = on
+  workspace = special:tuiclock
+  match:initial_class = ^(tuiclock)$
 }
 
 ###############
