--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -71,18 +71,20 @@ exec-once = [workspace special:tuiclock silent] ~/dotfiles/scripts/tuiclock/laun
 ### LOOK AND FEEL ###
 #####################
 
+source=~/.config/hypr/colors.conf
+
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 3
+    gaps_in = 0
     gaps_out = 0
 
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $mauve $blue 45deg
+    col.inactive_border = rgb(595959)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
