--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,8 +9,8 @@ font_size 12.0
 symbol_map U+1F600-U+1F64F Noto Color Emoji
 
 # Window Configuration
-window_padding_width 6
-window_padding_height 6
+window_padding_width 8
+window_padding_height 8
 background_opacity 1.0
 background_blur 32
 hide_window_decorations yes
@@ -24,6 +24,9 @@ macos_option_as_alt left
 map super+v paste_from_clipboard
 copy_on_select yes
 strip_trailing_spaces smart
+
+# backspace by word
+map ctrl+backspace send_text all \x17
 
 # Cursor Configuration
 cursor_shape block
