--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,8 @@ plugin {
 exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
 exec-once = hyprpm reload
 exec-once = hypridle
+exec-once = swaync
+exec-once = udiskie -a -n
 exec-once = [workspace special:tuiclock silent] ~/dotfiles/scripts/tuiclock/launch-tuiclock.sh
 
 ###################
