[hypr] Switch fullscreen binds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -238,8 +238,8 @@ bindd = $M SHIFT, K, Move window or group up, movewindoworgroup, u
 bindd = $M SHIFT, L, Move window or group right, movewindoworgroup, r
 
 # Misc
-bindd = $M, F, Toggle fullscreen, fullscreen, 0
-bindd = $M SHIFT, F, Toggle maximize, fullscreen, 1
+bindd = $M SHIFT, F, Toggle fullscreen, fullscreen, 0
+bindd = $M, F, Toggle maximize, fullscreen, 1
 bindd = $M CTRL, F, Toggle fake fullscreen, fullscreenstate, -1, 3
 bindd = $M, Q, Kill active window, killactive
 bindd = $M SHIFT, Q, Force kill active window, forcekillactive
