[kitty] better clipboard integration

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -38,6 +38,9 @@ scrollback_lines 3000
 # Shell integration
 shell_integration enabled
 
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+
+
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
 include current-theme.conf
