[qs] Add custom quickshell top bar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -284,7 +284,10 @@ bind = $M SHIFT, 9, movetoworkspace, 9
 bind = $M SHIFT, 0, movetoworkspace, 10
 
 # Show the current time for 1 second
-bind = $M, T, exec, hyprctl dispatch togglespecialworkspace tuiclock && sleep 1 && hyprctl dispatch togglespecialworkspace tuiclock
+bind = $M SHIFT, T, exec, hyprctl dispatch togglespecialworkspace tuiclock && sleep 1 && hyprctl dispatch togglespecialworkspace tuiclock
+
+# Toggle top bar
+bind = $M, T, exec, qs -c retro ipc call topbar toggle
 
 # Move/resize windows with M + LMB/RMB and dragging
 bindm = $M, mouse:272, movewindow
