--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -312,6 +312,9 @@ bindd = SUPER, C, Universal copy, sendshortcut, CTRL, Insert,
 bindd = SUPER, V, Universal paste, sendshortcut, SHIFT, Insert,
 bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
 
+# Screenshot
+bind = , PRINT, exec, hyprshot -m region
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
