--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ plugin {
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # exec-once = waybar & hyprpaper &
-exec-once = QT_FONT_DPI=144 qs -c retro & hyprpaper &
+exec-once = QT_FONT_DPI= qs -c retro & hyprpaper &
 exec-once = hyprpm reload
 exec-once = hypridle
 exec-once = swaync
